# threat-modeling-mcp-server

./: .gitignore  DEVELOPING.md  README.md  install-kiro-agent.sh  pyproject.toml  run_server.py
.kiro/agents/: threat-modeler.json
.kiro/prompts/: threat-modeler.md
.kiro/skills/phase-1-business-context/: SKILL.md
.kiro/skills/phase-2-architecture/: SKILL.md
.kiro/skills/phase-3-threat-actors/: SKILL.md
.kiro/skills/phase-4-trust-boundaries/: SKILL.md
.kiro/skills/phase-5-asset-flows/: SKILL.md
.kiro/skills/phase-6-threat-identification/: SKILL.md
.kiro/skills/phase-7-5-code-validation/: SKILL.md
.kiro/skills/phase-7-mitigation-planning/: SKILL.md
.kiro/skills/phase-8-residual-risk/: SKILL.md
.kiro/skills/phase-9-output-generation/: SKILL.md
tests/: __init__.py  test_enum_validator.py  test_models.py  test_step_orchestrator.py  test_threat_generator.py
threat_modeling_mcp_server/: __init__.py  server.py
threat_modeling_mcp_server/models/: architecture_models.py  asset_flow_models.py  code_validation_models.py  models.py  threat_actor_models.py  threat_models.py  trust_boundary_models.py
threat_modeling_mcp_server/tools/: architecture_analyzer.py  asset_flow_analyzer.py  assumption_manager.py  business_context.py  code_security_validator.py  data_model_types.py  step_orchestrator.py  threat_actor_analyzer.py  threat_generator.py  threat_model_plan.py  threat_model_validator.py  trust_boundary_analyzer.py  trust_boundary_detector.py
threat_modeling_mcp_server/utils/: __init__.py  comprehensive_exporter.py  file_utils.py  state_collector.py
threat_modeling_mcp_server/validation/: enum_validator.py  instruction_validator.py
